--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yuribenjamin.github.io/covid_tracker",
+  "homepage": "http://thahair.github.io/covid_tracker",
   "name": "covid_tracker",
   "version": "0.1.0",
   "private": true,
